Screen size scaling for adding breakage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <main class="mdl-layout__content">
 
-            <div class="mdl-grid portfolio-max-width portfolio-contact">
+            <div class="mdl-grid portfolio-max-width">
 
                 <div class="mdl-grid mdl-cell mdl-cell--8-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
@@ -78,7 +78,7 @@
                         </p>
                     </form>
                 </div>
-                <div id="breakages" class="mdl-cell--4-col mdl-cell--12-col-tablet">
+                <div id="breakages" class="mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing ">
                         <!-- Conatct Object li.list-group-item.contact will be added here by js -->
                 </div>
             </div>
