Fix enter on incomplete form

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select getmdl-select__fullwidth">
 
                             <label for="boatID" class="mdl-textfield__label">Boat Number</label>
-                            <input class="mdl-textfield__input" type="text" id="boatID" readonly tabIndex="-1">
+                            <input class="mdl-textfield__input" type="text" id="boatID" required readonly tabIndex="-1">
 
                             <ul for="boatID" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
                                 <li class="mdl-menu__item">1</li>
@@ -78,11 +78,11 @@
                         </div>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                             <label class="mdl-textfield__label" for="category">Category</label>
-                            <input type="text" class="mdl-textfield__input" id="category" placeholder="Enter Category of Breakage">
+                            <input type="text" class="mdl-textfield__input" id="category" required placeholder="Enter Category of Breakage">
                         </div>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                             <label class="mdl-textfield__label" for="details">Details</label>
-                            <textarea class="mdl-textfield__input" type="text" rows="5" id="details" placeholder="Enter Breakage Details"></textarea>
+                            <textarea class="mdl-textfield__input" type="text" rows="5" id="details" required placeholder="Enter Breakage Details"></textarea>
                         </div>
                         <p>
                             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent addValue" type="submit">
