--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
               <div class="portfolio-logo"></div>
-          <span class="mdl-layout__title">Simple portfolio website</span>
+          <span class="mdl-layout__title">Title</span>
                 </span>
             </div>
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
