--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
 
 </head>
 
-<body>
+<body class="mdl-color--blue-grey-50">
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row">
+            <div class="mdl-layout__header-row portfolio-logo-row mdl-color--teal-300">
                 <span class="mdl-layout__title">
               <div class="portfolio-logo"></div>
-          <span class="mdl-layout__title">Title</span>
+          <span class="mdl-layout__title">U23 Squad Boat Breakage System</span>
                 </span>
             </div>
-            <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
+            <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only mdl-color--teal-300">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                    <a class="mdl-navigation__link is-active" href="contact.html">Contact</a>
+                    <a class="mdl-navigation__link is-active" href="index.html">Report Breakage</a>
                 </nav>
             </div>
         </header>
 
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                <a class="mdl-navigation__link" href="contact.html">Contact</a>
+                <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
             </nav>
         </div>
         <main class="mdl-layout__content portfolio-contact">
@@ -49,10 +49,11 @@
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-grid mdl-cell mdl-cell--8-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">U23 Squad Boat Breakages</h2>
+                        <h3 class="mdl-card__title-text">Report a Boat Breakage</h3>
                     </div>
 
                     <form method="post" name="breakageForm">
+                        <h4>Your Info</h4>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                             <label class="mdl-textfield__label" for="name">Name</label>
                             <input type="text" class="mdl-textfield__input" id="name" required placeholder="Enter Name">
@@ -61,7 +62,7 @@
                             <label class="mdl-textfield__label" for="email">Email</label>
                             <input type="email" class="mdl-textfield__input" id="email" required placeholder="Enter Email">
                         </div>
-                        <h3>Breakage</h3>
+                        <h4>Breakage Info</h4>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select getmdl-select__fullwidth">
 
                             <label for="boatID" class="mdl-textfield__label">Boat Number</label>
