--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row mdl-color--teal-300">
+            <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
               <div class="portfolio-logo"></div>
           <span class="mdl-layout__title">U23 Squad Boat Breakage System</span>
                 </span>
             </div>
-            <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only mdl-color--teal-300">
+            <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Report Breakage</a>
                 </nav>
