--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- Include Firebase Library -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
-    <!-- Contacts Store JavaScript -->
+    <!-- Add Breakage to databse JavaScript -->
     <script src="jscript/addBreakage.js"></script>
+
     <script src=styles/material.min.js></script>
 </body>
 
