--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
                 <div class="mdl-snackbar__text"></div>
                 <button class="mdl-snackbar__action" type="button"></button>
             </div>
+
+            <footer class="mdl-mini-footer">
+              <div class="mdl-mini-footer__left-section">
+                <div class="mdl-logo">Bryn Bennett</div>
+                <ul class="mdl-mini-footer__link-list">
+                  <li><a href="index.html">Report Boat Breakage</a></li>
+                  <li><a href="viewBreakages.html">View Boat Breakages</a></li>
+                </ul>
+              </div>
+                <div class="mdl-mini-footer__right-section">
+                </div>
+            </footer>
         </main>
     </div>
 
