--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -47,6 +47,19 @@
             </nav>
         </div>
         <main class="mdl-layout__content portfolio-contact">
+
+
+            <footer class="mdl-mini-footer">
+              <div class="mdl-mini-footer__left-section">
+                <div class="mdl-logo">Bryn Bennett</div>
+                <ul class="mdl-mini-footer__link-list">
+                  <li><a href="index.html">Report Boat Breakage</a></li>
+                  <li><a href="viewBreakages.html">View Boat Breakages</a></li>
+                </ul>
+              </div>
+                <div class="mdl-mini-footer__right-section">
+                </div>
+            </footer>
         </main>
     </div>
 
