--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
     <title>Bryn Bennett "LaserFlash"</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="styles/material.min.css" />
     <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link re="stylesheet" href="styles/dialog-polyfill.css"  />
-    <script src="jscript/dialog-polyfill.css"></script>
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.css">
     <!--getmdl-select-->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.css"/>
     <script defer src="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.js"></script>
 
 </head>
@@ -112,19 +110,6 @@
                 <button class="mdl-snackbar__action" type="button"></button>
             </div>
 
-            <dialog id="dialog" class="mdl-dialog">
-                <h3 class="mdl-dialog__title">Confirm Removal</h3>
-                <div class="mdl-dialog__content">
-                    <p>
-                        Are you sure you want to remove this breakage
-                    </p>
-                </div>
-                <div class="mdl-dialog__actions">
-                    <button type="button" class="mdl-button close">Cancel</button>
-                    <button type="button" class="mdl-button remove" enabled>Remove</button>
-                </div>
-            </dialog>
-
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
                     <div class="mdl-logo">Bryn Bennett</div>
@@ -138,6 +123,23 @@
             </footer>
         </main>
     </div>
+
+    <dialog id="dialog" class="mdl-dialog">
+        <h3 class="mdl-dialog__title">Confirm Removal</h3>
+        <div class="mdl-dialog__content">
+            <p>
+                Are you sure you want to remove this breakage
+                <br />
+                This does not mark it as fixed instead removes a breakage if it was incorrectly entered
+            </p>
+        </div>
+        <div class="mdl-dialog__actions">
+            <button type="button" class="mdl-button close">Cancel</button>
+            <button type="button" class="mdl-button remove" enabled>Remove</button>
+        </div>
+    </dialog>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.js"></script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
