basic viewing of breakages

--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -47,8 +47,9 @@
             </nav>
         </div>
         <main class="mdl-layout__content portfolio-contact">
+            <div class="mdl-grid" id="breakageDiv">
 
-
+            </div>
             <footer class="mdl-mini-footer">
               <div class="mdl-mini-footer__left-section">
                 <div class="mdl-logo">Bryn Bennett</div>
@@ -63,12 +64,14 @@
         </main>
     </div>
 
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Latest compiled and minified Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- Include Firebase Library -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
+    <script src="jscript/viewAllBreakages.js"></script>
 
     <script src=styles/material.min.js></script>
 </body>
