fix active navigation display

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.css">
+
     <!--getmdl-select-->
     <link rel="stylesheet" href="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.css"/>
     <script defer src="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.js"></script>
@@ -35,7 +36,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Report Breakage</a>
-                    <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
+                    <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
                 </nav>
             </div>
         </header>
@@ -43,7 +44,7 @@
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
-                <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
+                <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
             </nav>
         </div>
         <main class="mdl-layout__content portfolio-contact">
