--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -35,7 +35,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Report Breakage</a>
-                    <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
+                    <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
                 </nav>
             </div>
         </header>
@@ -43,7 +43,7 @@
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
-                <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
+                <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
             </nav>
         </div>
         <main class="mdl-layout__content portfolio-contact">
