--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -34,8 +34,8 @@
             </div>
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                    <a class="mdl-navigation__link is-active" href="index.html">Report Breakage</a>
-                    <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
+                    <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
+                    <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
                 </nav>
             </div>
         </header>
