better display on smaller device

--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -63,7 +63,7 @@
                 <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
             </nav>
         </div>
-        <main class="mdl-layout__content portfolio-contact">
+        <main class="mdl-layout__content">
             <div class="mdl-grid" id="breakageDiv">
 
             </div>
