Functionality, Mark breakage as fixed

--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -67,6 +67,14 @@
             <div class="mdl-grid" id="breakageDiv">
 
             </div>
+
+
+            <div id="toast" class="mdl-js-snackbar mdl-snackbar">
+                <div class="mdl-snackbar__text"></div>
+                <button class="mdl-snackbar__action" type="button"></button>
+            </div>
+
+            
             <footer class="mdl-mini-footer">
               <div class="mdl-mini-footer__left-section">
                 <div class="mdl-logo">Bryn Bennett</div>
