Viewing fixed breakages

--- a/fixedBreakages.html
+++ b/fixedBreakages.html
@@ -52,8 +52,8 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
-                    <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
-                    <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
+                    <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
+                    <a class="mdl-navigation__link is-active" href="fixedBreakages.html">View Fixed</a>
                 </nav>
             </div>
         </header>
@@ -99,7 +99,7 @@
     <!-- Include Firebase Library -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
 
-    <script src="jscript/viewAllBreakages.js"></script>
+    <script src="jscript/viewFixed.js"></script>
 
     <script src=styles/material.min.js></script>
 </body>
