--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Report Breakage</a>
                     <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
+                    <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
                 </nav>
             </div>
         </header>
@@ -62,6 +63,7 @@
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
                 <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
+                <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
             </nav>
         </div>
         <main class="mdl-layout__content portfolio-contact">
