--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                                 <li class="mdl-menu__item">4</li>
                                 <li class="mdl-menu__item">5</li>
                                 <li class="mdl-menu__item">6</li>
+                                <li class="mdl-menu__item">RiB</li>
                             </ul>
                         </div>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select getmdl-select__fullwidth">
