--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 
 </head>
 
-<body class="mdl-color--blue-grey-50">
+<body>
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
@@ -67,6 +66,7 @@
             </nav>
         </div>
         <main class="mdl-layout__content portfolio-contact">
+          <div class="mdl-color--blue-grey-50">
 
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-grid mdl-cell mdl-cell--8-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp">
@@ -130,10 +130,10 @@
                 <div class="mdl-snackbar__text"></div>
                 <button class="mdl-snackbar__action" type="button"></button>
             </div>
-
+          </div>
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">Bryn Bennett</div>
+                    <div class="mdl-logo">&copy Bryn Bennett</div>
                     <ul class="mdl-mini-footer__link-list">
                         <li><a href="index.html">Report Boat Breakage</a></li>
                         <li><a href="viewBreakages.html">View Boat Breakages</a></li>
@@ -142,7 +142,10 @@
                 <div class="mdl-mini-footer__right-section">
                 </div>
             </footer>
+
+
         </main>
+
     </div>
 
     <dialog id="dialog" class="mdl-dialog">
