--- a/fixedBreakages.html
+++ b/fixedBreakages.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body class="mdl-color--blue-grey-50">
+<body>
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
@@ -66,20 +66,19 @@
             </nav>
         </div>
         <main class="mdl-layout__content">
-            <div class="mdl-grid" id="breakageDiv">
+          <div class="mdl-color--blue-grey-50">
 
-            </div>
-
+            <div class="mdl-grid" id="breakageDiv"></div>
 
             <div id="toast" class="mdl-js-snackbar mdl-snackbar">
                 <div class="mdl-snackbar__text"></div>
                 <button class="mdl-snackbar__action" type="button"></button>
             </div>
 
-
+          </div>
             <footer class="mdl-mini-footer">
               <div class="mdl-mini-footer__left-section">
-                <div class="mdl-logo">Bryn Bennett</div>
+                <div class="mdl-logo">&copy Bryn Bennett</div>
                 <ul class="mdl-mini-footer__link-list">
                   <li><a href="index.html">Report Boat Breakage</a></li>
                   <li><a href="viewBreakages.html">View Boat Breakages</a></li>
