--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -42,31 +42,31 @@
 
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
-      <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-        <div class="mdl-layout__header-row portfolio-logo-row">
-          <span class="mdl-layout__title">
+    <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
+      <div class="mdl-layout__header-row portfolio-logo-row">
+        <span class="mdl-layout__title">
               <div class="portfolio-logo"></div>
-          <span class="mdl-layout__title">U23 Squad Boat Breakage System</span>
-          </span>
-        </div>
-        <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-            <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
-            <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
-            <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
-          </nav>
-        </div>
-      </header>
-
-      <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+          <span class="mdl-layout__title">WYST Boat Breakage System</span>
+        </span>
+      </div>
+      <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
         <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
           <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
-          <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
+          <a class="mdl-navigation__link is-active" href="viewBreakages.html">View Breakages</a>
           <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
         </nav>
       </div>
-      <main class="mdl-layout__content">
-        <div class="mdl-color--blue-grey-50">
+    </header>
+
+    <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+      <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+        <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
+        <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
+        <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
+      </nav>
+    </div>
+    <main class="mdl-layout__content">
+      <div class="mdl-color--blue-grey-50">
 
         <div class="mdl-grid" id="breakageDiv"></div>
 
@@ -75,18 +75,18 @@
           <button class="mdl-snackbar__action" type="button"></button>
         </div>
 
-    </div>
-    <footer class="mdl-mini-footer">
-      <div class="mdl-mini-footer__left-section">
-        <div class="mdl-logo">&copy Bryn Bennett</div>
-        <ul class="mdl-mini-footer__link-list">
-          <li><a href="index.html">Report Boat Breakage</a></li>
-          <li><a href="viewBreakages.html">View Boat Breakages</a></li>
-        </ul>
       </div>
-      <div class="mdl-mini-footer__right-section">
-      </div>
-    </footer>
+      <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+          <div class="mdl-logo">&copy Bryn Bennett</div>
+          <ul class="mdl-mini-footer__link-list">
+            <li><a href="index.html">Report Boat Breakage</a></li>
+            <li><a href="viewBreakages.html">View Boat Breakages</a></li>
+          </ul>
+        </div>
+        <div class="mdl-mini-footer__right-section">
+        </div>
+      </footer>
     </main>
   </div>
 
