--- a/index.html
+++ b/index.html
@@ -42,29 +42,37 @@
 <body>
 
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-      <div class="mdl-layout__header-row portfolio-logo-row">
-        <span class="mdl-layout__title">
-              <div class="portfolio-logo"></div>
-                <span class="mdl-layout__title">WYST Boat Breakage System</span>
-        </span>
+    <div class="mdl-layout__header mdl-layout__header--waterfall">
+      <div class="mdl-layout__header-row">
+        <span class="title mdl-layout-title">
+           <img class="logo-image" src="images/logoNoText.png">
+             WYST Boat Breakages
+         </span>
+        <!-- Add spacer, to align navigation to the right in desktop -->
+        <div class="mdl-layout-spacer"></div>
+        <!-- Navigation -->
+        <div class="navigation-container">
+          <nav class="navigation mdl-navigation">
+            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">Report Breakage</a>
+            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="viewBreakages.html">View Breakages</a>
+            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="fixedBreakages.html">View Fixed</a>
+          </nav>
+        </div>
       </div>
-      <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-          <a class="mdl-navigation__link is-active" href="index.html">Report Breakage</a>
-          <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
-          <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
-        </nav>
-      </div>
-    </header>
+    </div>
 
-    <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-      <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">
+         <img class="logo-image-drawer" src="images/logo.png">
+       </span>
+      <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
         <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
         <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
       </nav>
     </div>
+
+
     <main class="mdl-layout__content portfolio-contact">
       <div class="mdl-color--blue-grey-50">
 
@@ -86,7 +94,7 @@
               </div>
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <label class="mdl-textfield__label" for="mobile">Mobile</label>
-                <input type="tel" pattern="[0-9]{9,12}" class="mdl-textfield__input" id="mobile" required placeholder="Enter Mobile"/>
+                <input type="tel" pattern="[0-9]{9,12}" class="mdl-textfield__input" id="mobile" required placeholder="Enter Mobile" />
               </div>
 
               <h4>Breakage Info</h4>
