--- a/index.html
+++ b/index.html
@@ -73,16 +73,14 @@
     </div>
 
 
-    <main class="mdl-layout__content portfolio-contact">
+    <main class="mdl-layout__content breakageReport">
       <div class="mdl-color--blue-grey-50">
 
-        <div class="mdl-grid portfolio-max-width">
+        <div class="mdl-grid breakageReport-max-width">
           <div class="mdl-grid mdl-cell mdl-cell--8-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp">
-            <div class="mdl-card__title">
-              <h3 class="mdl-card__title-text">Report a Boat Breakage</h3>
-            </div>
-
             <form method="post" name="breakageForm">
+
+              <h3 class="">Boat Breakage Form</h3>
               <h4>Your Info</h4>
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <label class="mdl-textfield__label" for="name">Name</label>
