--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Navigation -->
         <div class="navigation-container">
           <nav class="navigation mdl-navigation">
-            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">Report Breakage</a>
+            <a class="mdl-navigation__link mdl-typography--text-uppercase is-active" href="index.html">Report Breakage</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="viewBreakages.html">View Breakages</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="fixedBreakages.html">View Fixed</a>
           </nav>
@@ -83,7 +83,7 @@
 
               <h3>Boat Breakage Form</h3>
               <h4>Your Info</h4>
-              
+
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <label class="mdl-textfield__label" for="name">Name</label>
                 <input type="text" class="mdl-textfield__input" id="name" required placeholder="Enter Name">
