--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -53,7 +53,7 @@
         <div class="navigation-container">
           <nav class="navigation mdl-navigation">
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">Report Breakage</a>
-            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="viewBreakages.html">View Breakages</a>
+            <a class="mdl-navigation__link mdl-typography--text-uppercase is-active" href="viewBreakages.html">View Breakages</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="fixedBreakages.html">View Fixed</a>
           </nav>
         </div>
@@ -70,7 +70,7 @@
         <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
       </nav>
     </div>
-    
+
     <main class="mdl-layout__content">
       <div class="mdl-color--blue-grey-50">
 
