--- a/fixedBreakages.html
+++ b/fixedBreakages.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  
+
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <div class="mdl-layout__header mdl-layout__header--waterfall">
       <div class="mdl-layout__header-row">
@@ -53,7 +53,7 @@
         <div class="navigation-container">
           <nav class="navigation mdl-navigation">
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">Report Breakage</a>
-            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="viewBreakages.html">View Breakages</a>
+            <a class="mdl-navigation__link mdl-typography--text-uppercase is-active" href="viewBreakages.html">View Breakages</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="fixedBreakages.html">View Fixed</a>
           </nav>
         </div>
