Mark as fixed confirmation

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
   <link rel="stylesheet" href="styles/material.min.css" />
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.css">
 
   <!--getmdl-select-->
   <link rel="stylesheet" href="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.css" />
   <script defer src="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.js"></script>
+
+  <!--polyFill-Dialog-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.css">
 
 </head>
 
@@ -46,7 +48,7 @@
       <div class="mdl-layout__header-row">
         <span class="title mdl-layout-title">
            <img class="logo-image" src="images/logoNoText.png">
-            WYST Boat Breakages          
+            WYST Boat Breakages
          </span>
         <!-- Add spacer, to align navigation to the right in desktop -->
         <div class="mdl-layout-spacer"></div>
