--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -36,6 +36,9 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.css">
   <script defer src="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.js"></script>
 
+  <!--polyFill-Dialog-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.css">
+
 </head>
 
 <body>
@@ -96,6 +99,20 @@
     </main>
   </div>
 
+  <dialog id="dialog" class="mdl-dialog">
+    <h3 class="mdl-dialog__title">Confirm Breakage Fixed</h3>
+    <div class="mdl-dialog__content">
+      <p>
+        Are you sure you want to mark this breakage as being fixed?
+      </p>
+    </div>
+    <div class="mdl-dialog__actions">
+      <button type="button" class="mdl-button close">Cancel</button>
+      <button type="button" class="mdl-button fix" enabled>Mark Fixed</button>
+    </div>
+  </dialog>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.js"></script>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
