--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
       <div class="mdl-layout__header-row">
         <span class="title mdl-layout-title">
            <img class="logo-image" src="images/logoNoText.png">
-            WYST Boat Breakages
+           WYST Boat Breakages
          </span>
+
         <!-- Add spacer, to align navigation to the right in desktop -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation -->
@@ -96,7 +97,7 @@
               </div>
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <label class="mdl-textfield__label" for="mobile">Mobile</label>
-                <input type="tel" pattern="[0-9]{9,12}" class="mdl-textfield__input" id="mobile" required placeholder="Enter Mobile" />
+                <input type="tel" pattern="[0-9]{9,12}" class="mdl-textfield__input" required id="mobile" placeholder="Enter Mobile" />
               </div>
 
               <h4>Breakage Info</h4>
@@ -110,8 +111,6 @@
                   <li class="mdl-menu__item">2</li>
                   <li class="mdl-menu__item">3</li>
                   <li class="mdl-menu__item">4</li>
-                  <li class="mdl-menu__item">5</li>
-                  <li class="mdl-menu__item">6</li>
                   <li class="mdl-menu__item">RIB</li>
                 </ul>
 
