Social media meta

--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -6,6 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Record of boat breakages for the U23 Squad">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+
+  <!--Meta Tags for Social Media -->
+  <meta property="og:title" content="WYST Boat Breakages">
+  <meta property="og:description" content="Keep track of breakages and issues with the WYST Boats">
+  <meta property="og:image" content="images/logo.png">
+  <meta property="og:url" content="https://laserflash.github.io/U23-Reports/index.html">
+
   <title>U23-Breakages</title>
 
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
