--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Record of boat breakages for the U23 Squad">
+  <meta name='pagename' content="WYST Maintenance"
+  <meta name="description" content="Keep track of maintenance and issues with the WYST Boats">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
   <!--Meta Tags for Social Media -->
   <meta property="og:title" content="WYST Boat Breakages">
-  <meta property="og:description" content="Keep track of breakages and issues with the WYST Boats">
+  <meta property="og:description" content="Keep track of maintenance and issues with the WYST Boats">
   <meta property="og:image" content="images/logo.png">
   <meta property="og:url" content="https://laserflash.github.io/U23-Reports/index.html">
 
   <title>U23-Breakages</title>
 
+  <!--Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -24,11 +26,16 @@
   <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <meta name="apple-mobile-web-app-title" content="WYST Maintenance">
+  <meta name='apple-touch-fullscreen' content='yes'>
+
   <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/manifest.json">
+  <meta name="theme-color" content="#2196F3">
+
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
