--- a/fixedBreakages.html
+++ b/fixedBreakages.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Keep track of breakages and issues with the WYST Boats">
   <meta property="og:image" content="images/logo.png">
   <meta property="og:url" content="https://laserflash.github.io/U23-Reports/index.html">
-  
+
 
   <title>U23-Breakages</title>
 
@@ -96,6 +96,7 @@
           <ul class="mdl-mini-footer__link-list">
             <li><a href="index.html">Report Boat Breakage</a></li>
             <li><a href="viewBreakages.html">View Boat Breakages</a></li>
+            <li><a href="fixedBreakages.html">View Fixed</a></li>
           </ul>
         </div>
         <div class="mdl-mini-footer__right-section">
