--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -98,6 +98,7 @@
           <ul class="mdl-mini-footer__link-list">
             <li><a href="index.html">Report Boat Breakage</a></li>
             <li><a href="viewBreakages.html">View Boat Breakages</a></li>
+            <li><a href="fixedBreakages.html">View Fixed</a></li>
           </ul>
         </div>
         <div class="mdl-mini-footer__right-section">
