--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name='pagename' content="WYST Boat Maintenance" />
+  <meta name='pagename' content="WYST Maintenance" />
   <meta name="description" content="Keep track of maintenance and issues with the WYST Boats" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
   <meta name="application-name" content="WYST Boat Maintenance"/>
@@ -35,7 +35,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
-  <link rel="manifest" href="favicon/manifest.json" />
+
   <meta name="theme-color" content="#2196F3" />
   <meta name="mobile-web-app-capable" content="yes">
 
