--- a/fixedBreakages.html
+++ b/fixedBreakages.html
@@ -10,7 +10,7 @@
   <meta name="application-name" content="WYST Boat Maintenance"/>
 
   <!--Meta Tags for Social Media -->
-  <meta property="og:title" content="WYST Boat Breakages" />
+  <meta property="og:title" content="WYST Boat Maintenance" />
   <meta property="og:description" content="Keep track of maintenance and issues with the WYST Boats" />
   <meta property="og:image" content="images/logo.png" />
   <meta property="og:url" content="https://laserflash.github.io/U23-Reports/index.html">
@@ -62,7 +62,7 @@
       <div class="mdl-layout__header-row">
         <span class="title mdl-layout-title">
            <img class="logo-image" src="images/logoNoText.png">
-             WYST Boat Breakages
+             WYST Boat Maintenance
          </span>
         <!-- Add spacer, to align navigation to the right in desktop -->
         <div class="mdl-layout-spacer"></div>
