Reworked contact and handling of empty fields

--- a/index.html
+++ b/index.html
@@ -109,12 +109,8 @@
                 <input type="text" class="mdl-textfield__input" id="name" required placeholder="Enter Name">
               </div>
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <label class="mdl-textfield__label" for="email">Email</label>
-                <input type="email" class="mdl-textfield__input" id="email" required placeholder="Enter Email">
-              </div>
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <label class="mdl-textfield__label" for="mobile">Mobile</label>
-                <input type="tel" pattern="[0-9]{9,12}" class="mdl-textfield__input" required id="mobile" placeholder="Enter Mobile" />
+                <label class="mdl-textfield__label" for="contact">Contact</label>
+                <input type="text" class="mdl-textfield__input" id="contact" placeholder="Enter mobile or email">
               </div>
 
               <h4>Breakage Info</h4>
