--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <!-- Navigation -->
         <div class="navigation-container">
           <nav class="navigation mdl-navigation">
+            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="usage.html">Report Usage</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase is-active" href="index.html">Report Breakage</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="viewBreakages.html">View Breakages</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="fixedBreakages.html">View Fixed</a>
@@ -86,6 +87,7 @@
          <img class="logo-image-drawer" src="images/logo.png">
        </span>
       <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="usage.html">Report Usage</a>
         <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
         <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
         <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
@@ -165,6 +167,7 @@
         </div>
         <div class="mdl-mini-footer__right-section">
           <ul class="mdl-mini-footer__link-list">
+            <li><a href="usage.html">Report Usage</a></li>
             <li><a href="index.html">Report Breakage</a></li>
             <li><a href="viewBreakages.html">View Breakages</a></li>
             <li><a href="fixedBreakages.html">View Fixed</a></li>
@@ -199,7 +202,7 @@
   <!-- Include Firebase Library -->
   <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
   <!-- Add Breakage to databse JavaScript -->
-  <script src="jscript/addBreakage.js"></script>
+  <script src="jscript/usage.js"></script>
 
   <script src=styles/material.min.js></script>
 </body>
