--- a/viewBreakages.html
+++ b/viewBreakages.html
@@ -72,6 +72,7 @@
         <!-- Navigation -->
         <div class="navigation-container">
           <nav class="navigation mdl-navigation">
+            <a class="mdl-navigation__link mdl-typography--text-uppercase" href="usage.html">Report Usage</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">Report Breakage</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase is-active" href="viewBreakages.html">View Breakages</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase" href="fixedBreakages.html">View Fixed</a>
@@ -85,6 +86,7 @@
          <img class="logo-image-drawer" src="images/logo.png">
        </span>
       <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="usage.html">Report Usage</a>
         <a class="mdl-navigation__link" href="index.html">Report Breakage</a>
         <a class="mdl-navigation__link" href="viewBreakages.html">View Breakages</a>
         <a class="mdl-navigation__link" href="fixedBreakages.html">View Fixed</a>
@@ -108,6 +110,7 @@
         </div>
         <div class="mdl-mini-footer__right-section">
           <ul class="mdl-mini-footer__link-list">
+            <li><a href="usage.html">Report Usage</a></li>
             <li><a href="index.html">Report Breakage</a></li>
             <li><a href="viewBreakages.html">View Breakages</a></li>
             <li><a href="fixedBreakages.html">View Fixed</a></li>
